[build-system]
requires = ["setuptools>=69.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distinctid"
version = "1.0.2"
authors = [
  { name="Chukwudi Nwachukwu", email="chukwudi.nwachukwu@pitchcardinal.com" },
]
description = "A unique number generator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/ichux/distinctid"
Issues = "https://github.com/ichux/distinctid/issues"