[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distinctid"
version = "1.0.4"
authors = [
  { name="Chukwudi Nwachukwu", email="chukwudi.nwachukwu@pitchcardinal.com" },
]
description = "A unique number generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "redis>=7.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
asyncio = ["redis[asyncio]>=7.1.0"]

[project.urls]
Homepage = "https://github.com/ichux/distinctid"
Issues = "https://github.com/ichux/distinctid/issues"
